fixing tinymce overflow

--- a/shared-assets/css/dcl.css
+++ b/shared-assets/css/dcl.css
@@ -720,7 +720,7 @@ a.btn.btn-primary {
 	-webkit-box-shadow: rgba(0, 0, 0, 0.5) 0 8px 20px 0;
 	-moz-box-shadow: rgba(0, 0, 0, 0.5) 0 8px 20px 0;
 	box-shadow: rgba(0, 0, 0, 0.5) 0 8px 20px 0;
-		-webkit-transition: all .4s ease;
+	-webkit-transition: all .4s ease;
 	-moz-transition: all .4s ease-out;
 	-ms-transition: all .4s ease-out;
 	-o-transition: all .4s ease-out;
@@ -2182,7 +2182,12 @@ a .icon-circle-white:hover {
 }
 /* styles for Springshare */
 
-
+#tinymce .row {
+	margin: 0;
+}
+#tinymce {
+	padding: 20px;
+}
 .s-la-footer.s-la-color-bars.s-la-color-bars-border {
 	background: rgba(0, 0, 0, 0) none repeat scroll 0 0;
 	border-top: medium none;
